build: Updating npm dependencies
* @vue/compiler-sfc: 3.2.37 → 3.4.27
* eslint-config-wikimedia: 0.25.0 → 0.28.2
  The following rules are failing and were disabled:
  * implicit-arrow-linebreak
  * no-mixed-spaces-and-tabs
* grunt-eslint: 24.0.1 → 24.3.0
* grunt-stylelint: 0.18.0 → 0.20.1
* stylelint-config-wikimedia: 0.15.0 → 0.17.2
* vue: 3.2.37 → 3.4.27
* @babel/traverse: 7.21.4 → 7.25.7
  * https://github.com/advisories/GHSA-67hx-6x53-jw92
* ws: 7.5.9 → 7.5.10
  * https://github.com/advisories/GHSA-3h5v-q93c-6h6q

Change-Id: Ic0a6b025bcadd921d67d27102f2db4a095ef567d

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
 		"no-jquery/variable-pattern": "off",
 		"no-jquery/no-event-shorthand": "off",
 		"compat/compat": "warn",
-		"mediawiki/msg-doc": "warn"
+		"mediawiki/msg-doc": "warn",
+		"implicit-arrow-linebreak": "warn",
+		"no-mixed-spaces-and-tabs": "warn"
 	},
 	"overrides": [
 		{
