--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.16.11",
-		"@vue/compiler-sfc": "3.2.37",
+		"@vue/compiler-sfc": "3.4.27",
 		"@vue/test-utils": "2.3.2",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"babel-core": "^6.26.3",
-		"eslint-config-wikimedia": "0.25.0",
+		"eslint-config-wikimedia": "0.28.2",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
-		"grunt-eslint": "24.0.1",
-		"grunt-stylelint": "0.18.0",
+		"grunt-eslint": "24.3.0",
+		"grunt-stylelint": "0.20.1",
 		"jest-when": "^3.5.1",
 		"jquery": "3.7.1",
-		"stylelint-config-wikimedia": "0.15.0",
-		"vue": "3.2.37",
-		"pinia": "2.0.16"
+		"pinia": "2.0.16",
+		"stylelint-config-wikimedia": "0.17.2",
+		"vue": "3.4.27"
 	},
 	"eslintIgnore": [
 		"vendor/**"
